<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/LineY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showLine"
            android:tag="@string/LineY"
            android:text="@string/LineY" />

        <Button
            android:id="@+id/LineX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showLine"
            android:tag="@string/LineX"
            android:text="@string/LineX" />

        <Button
            android:id="@+id/SLAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showLine"
            android:tag="@string/SLAC"
            android:text="@string/SLAC" />
    </LinearLayout>

</FrameLayout>